@@ -2,3 +2,4 @@ Changes in PyQwt-4.2.2:
 - builds with Microsoft-Visual-Studio-8.0 on Windows XP64.
 - change anynumpy.py so that the examples work with numpy-1.0.
 - enable parallel build on MacOS X.
+- SymbolSizeDemo.py example.
